tests/negative/neg_statement_label_assignment.safe
-- Test: neg_statement_label_assignment
-- Description: Statement labels before assignments remain unsupported.
-- Expected: REJECT unsupported_source_construct

package statement_label_assignment_test

   type counter is range 0 to 10;

   function main
      value : counter = 0;

      label_1: value = 1;



